[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

[metadata]
name = covid19
version = 0.1.0
url = https://github.com/dmmolitor/COVID19-Twitter-Analysis
description = Python package for analyzing topics related to covid19
long_description = README.md
keywords = covid19, topic modeling
license = GNU General Public License v3 (GPLv3)
classifiers =
    LICENSE :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE (GPL)
    LICENSE :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.5
install_requires =
    tqdm>=4.45.0
    numpy>=1.18.2
    nltk>=3.4.5
    scikit-learn>=0.22.2.post1
    tensorly>=0.4.5
    loguru>=0.4.1
    matplotlib>=3.2.1
    seaborn>=0.10.0
    demoji==0.2.1


[options.packages.find]
where = src

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3
